k8s yamls for testings/podtest.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kubepython
  labels:
    app: kubepython
spec:
  containers:
  - name: python-web-test
    image: arieluchka/kubepython:1.0
    ports:
    - containerPort: 8080
    volumeMounts:
    - name: webconfig
      mountPath: /app/webcode

  volumes:
  - name: webconfig
    configMap:
      name: html-code
