k8s yamls for testings/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-for-kubepython
  labels:
    app: clusterip-kubepython
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubepython
